--- a/Metaheuristic-SOP-Comparison/Metaheuristic-SOP-Comparison.vcxproj.filters
+++ b/Metaheuristic-SOP-Comparison/Metaheuristic-SOP-Comparison.vcxproj.filters
@@ -23,4 +23,9 @@
       <UniqueIdentifier>{7810af8d-8188-4cfb-8385-63332c18cef0}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="main.cpp">
+      <Filter>Source Files\src</Filter>
+    </ClCompile>
+  </ItemGroup>
 </Project>
